whoami/11-whoami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: traefik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: cloudflare-issuer

spec:
  ingressClassName: traefik
  tls:
    - secretName: wildcard-bykowski.dev-tls
      hosts:
        - whoami.bykowski.dev
  rules:
    - host: whoami.bykowski.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  name: web
